# ece_421_project_3

./: .gitignore  Cargo.toml  package-lock.json  package.json
back_end/: Cargo.toml
back_end/src/: main.rs
back_end/src/ai/: connect_four_bot.rs
back_end/src/game_logic/: game_info.rs
backend/: Cargo.toml
backend/src/: main.rs
backend/src/ai/: connect_four_bot.rs  toot_otto_bot.rs
backend/src/game_logic/: connect_four.rs  toot_otto.rs
front_end/: package-lock.json  package.json
front_end/src/: App.js  index.js
front_end/src/components/: BoardGrid.js  Connect4BoardGrid.js  Header.js  TootOttoBoardGrid.js
front_end/src/pages/: Connect4.js  Home.js  TootOtto.js
frontend/: Cargo.toml  index.html  styles.css
frontend/src/: main.rs  router.rs
frontend/src/components/: cell.rs  column.rs  connect4Grid.rs  header.rs  mod.rs  slider.rs  tootOttoGrid.rs
frontend/src/pages/: connect4.rs  home.rs  mod.rs  tootOtto.rs
rust-component/: Cargo.toml
rust-component/src/: main.rs
rust-component/src/ai/: toot_otto_bot.rs
rust-component/src/game_logic/: mod.rs
src/: App.js  index.js  main copy.rs  main.rs
src/ai/: connect_four_bot.rs  mod.rs  toot_otto_bot.rs
src/components/: Gridi.js
src/game_logic/: connect_four.rs  game_info.rs  mod.rs  toot_otto.rs
src/pages/: Connect4.js  TootOtto.js
