[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.4.6"
rocket_codegen = "0.4.6"  
serde = { version = "1.0", features = ["derive"] }
rocket_cors = "0.5.1"
rocket_contrib = "0.4.6"
rand = "0.8.5"
lazy_static = "1.4.0"
reqwest = {version = "0.12.2", features = ["blocking"]}